--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,6 @@ serde = { version = "1.0", features = ["derive"] }
 clap = { version = "3.1.8", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
-ntex = { version = "=0.5.19", features = ["openssl", "rustls", "tokio"] }
+ntex = { version = "=0.5.24", features = ["rustls", "tokio"] }
 # Optional deps
 clap_mangen = { version = "0.1", optional = true }
