--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -5,7 +5,7 @@ name: Clippy
 on: [push, pull_request]
 
 jobs:
-  eslint_and_clippy:
+  clippy:
     strategy:
       fail-fast: true
     runs-on: ubuntu-latest
