--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,14 @@ opt-level = 3
 
 [features]
 default = []
-genman = [
-]
+
+[build-dependencies]
+chrono = { version = "0.4.19", features = ["serde"] }
+clap = { version = "3.2.22", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+clap_mangen = { version = "0.1" }
+clap_complete = "3.2.5"
+tabled = "0.8.0"
 
 [dependencies]
 futures = "0.3"
@@ -30,5 +36,3 @@ clap = { version = "3.2.22", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 uuid = { version = "1.1", features = ["serde", "v4"] }
 ntex = { version = "=0.5.25", features = ["rustls", "tokio"] }
-# Optional deps
-clap_mangen = { version = "0.1" }
