--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,10 @@ serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.0.18", features = ["derive"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 uuid = { version = "1.1", features = ["serde", "v4"] }
-ntex = { version = "=0.5.27", features = ["rustls", "tokio"] }
+ntex = { version = "=0.5.28", features = ["rustls", "tokio"] }
+url = { version = "2.3.1", features = ["serde"] }
+bollard = "0.13.0"
+tokio = { version = "1.21.2", features = ["fs"] }
+tokio-util = "0.7.4"
+futures-util = "0.3.25"
+hyper = "0.14.20"
