--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ tokio = { version = "1.21.2", features = ["fs"] }
 tokio-util = "0.7.4"
 futures-util = "0.3.25"
 hyper = "0.14.20"
+serde_urlencoded = "0.7.1"
