--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "nanocl"
 version = "0.1.5"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
-description = "The Self-Sufficient Hybrid-Cloud Orchestrator"
+description = "The Self-Sufficient Hybrid-Cloud Orchestrator CLI"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 
