[CI/CD] Tests strategy

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,4 +37,4 @@ jobs:
         echo "docker_host: /run/docker.sock" > /etc/nanocl/nanocl.conf;
         cargo run setup && sudo chmod 777 -R /run/nanocl;
     - name: Run tests
-      run: cargo make test
+      run: cargo make test-debug
