[CI/CD] Updated Clippy cache problem

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -17,7 +17,7 @@ jobs:
       # Cache Rust
       - uses: actions/cache@v3
         with:
-          path: ./src-tauri/target
+          path: ./target
           key: ${{ hashFiles('./Cargo.lock') }}
 
      # Cache Rust
