[CI/CD] Added cache for faster release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set branch name
       run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
+    # Cache Docker images
+    - uses: actions/cache@v3
+      with:
+        path: /var/lib/docker/image
+        key: docker-image-cache
     - name: Print branch name
       run: echo $BRANCH_NAME
     - name: Set version
