--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Prepare docker cache
+      run: sudo chmod 777 -R /var/lib/docker
     # Cache Docker images
     - uses: actions/cache@v3
       with:
