--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,3 +65,5 @@ jobs:
       run: gh release delete v$IMAGE_VERSION
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+    - name: Ensure docker cache
+      run: sudo chmod 777 -R /var/lib/docker
