--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
       with:
         path: /var/lib/docker/image
         key: docker-image-cache
+    - name: Post docker cache
+      run: sudo systemctl start docker
     - name: Set branch name
       run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
     - name: Print branch name
