--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,6 @@ jobs:
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v2
-
     - name: Cache register
       uses: actions/cache@v2
       with:
@@ -35,18 +34,8 @@ jobs:
       run: echo "IMAGE_VERSION=$(echo ${BRANCH_NAME##*-})" >> $GITHUB_ENV
     - name: Print version
       run: echo $IMAGE_VERSION
-    #- name: Build image
-    #  run: docker build -t nanocl:$IMAGE_VERSION .
-    - name: Build Docker image
-      uses: docker/build-push-action@v3
-      with:
-        context: ./
-        file: ./Dockerfile
-        load: true
-        push: false
-        tags: nanocl:${{ IMAGE_VERSION }}
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+    - name: Build image
+      run: docker buildx --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache -t nanocl:$IMAGE_VERSION .
     - name: Export image
       run: docker save nanocl:$IMAGE_VERSION | gzip > /tmp/nanocl:$IMAGE_VERSION.tar.gz
     - name: Test if release already exists
