[CI/CD] Buildx build image

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Print version
       run: echo $IMAGE_VERSION
     - name: Build image
-      run: docker buildx --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache -t nanocl:$IMAGE_VERSION .
+      run: docker buildx build --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache -t nanocl:$IMAGE_VERSION .
     - name: Export image
       run: docker save nanocl:$IMAGE_VERSION | gzip > /tmp/nanocl:$IMAGE_VERSION.tar.gz
     - name: Test if release already exists
