--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,8 @@ jobs:
     - uses: taiki-e/install-action@nextest
     - name: Ci file perm
       run: sudo chmod 777 /run/docker.sock && sudo mkdir /run/nanocl && sudo mkdir /var/lib/nanocl && sudo mkdir -p ./vm_images && sudo chmod 777 -R /run/nanocl && sudo chmod 777 -R /var/lib/nanocl && sudo mkdir -p /etc/nanocl && sudo chmod 777 -R /etc/nanocl
+    - name: Create user
+      run: useradd nanocl
     - name: Setup
       run: >-
         echo "docker_host: /run/docker.sock" > /etc/nanocl/nanocl.conf;
