--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,13 +30,13 @@ jobs:
     - uses: davidB/rust-cargo-make@v1
     - uses: taiki-e/install-action@cargo-llvm-cov
     - uses: taiki-e/install-action@nextest
+    - name: Create user
+      run: sudo useradd -U nanocl && sudo usermod -aG nanocl $USER && newgrp nanocl
     - name: Ci file perm
       run: sudo chmod 777 /run/docker.sock && sudo mkdir /run/nanocl && sudo mkdir /var/lib/nanocl && sudo mkdir -p ./vm_images && sudo chmod 777 -R /run/nanocl && sudo chmod 777 -R /var/lib/nanocl && sudo mkdir -p /etc/nanocl && sudo chmod 777 -R /etc/nanocl
-    - name: Create user
-      run: sudo useradd -U nanocl && sudo usermod -a -G nanocl $USER && newgrp nanocl
     - name: Setup
       run: >-
         echo "docker_host: /run/docker.sock" > /etc/nanocl/nanocl.conf;
-        sudo cargo run setup && sleep 5 && sudo chmod 777 -R /run/nanocl;
+        cargo run setup && sleep 5 && sudo chmod 777 -R /run/nanocl;
     - name: Run tests
-      run: cargo make test-debug
+      run: cargo make test
