--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Setup
       run: >-
         echo "docker_host: /run/docker.sock" > /etc/nanocl/nanocl.conf;
+        ls -l /run/docker.sock;
         cargo run setup && sleep 5 && sudo chmod 777 -R /run/nanocl;
     - name: Run tests
       run: cargo make test
