--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,38 +13,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    # Install rust
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
         override: true
         components: llvm-tools-preview
+    # Cache tests
     - uses: actions/cache@v3
       with:
         path: ./target/llvm-cov-target
         key: llvm-cov-key
-    - uses: actions/cache@v3
-      with:
-        path: ./fake_path/var/lib
-        key: image-and-container-key
+    # Cache rust
     - uses: Swatinem/rust-cache@v2
+    # Install cargo make
     - uses: davidB/rust-cargo-make@v1
+    # Install llvm-cov
     - uses: taiki-e/install-action@cargo-llvm-cov
+    # Install nextest
     - uses: taiki-e/install-action@nextest
-    - name: Create user
-      run: sudo useradd -U nanocl && sudo usermod -aG nanocl $USER
-    - name: Ci file perm
-      run: >-
-        sudo chown nanocl:nanocl /run/docker.sock;
-        sudo chmod 777 /run/docker.sock;
-        sudo mkdir -p /etc/nanocl;
-        sudo chown nanocl:nanocl /etc/nanocl;
-        sudo chmod 777 /etc/nanocl;
+    # Prepare CI
+    - name: Prepare CI
+      run: sudo ./scripts/prepare_ci.sh
+    # Run our CLI SETUP COMMAND
     - name: Setup
-      run: >-
-        newgrp nanocl;
-        echo "docker_host: /run/docker.sock" > /etc/nanocl/nanocl.conf;
-        sudo chmod 777 -R /etc/nanocl;
-        sudo chown nanocl:nanocl /run/docker.sock;
-        cargo run setup && sleep 5 && sudo chmod 777 -R /run/nanocl;
+      run: cargo run setup
+    # Run test
     - name: Run tests
       run: cargo make test
