[CI/CD] Fix tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,12 +37,12 @@ jobs:
       run: sudo ./scripts/prepare_ci.sh
     # Run our CLI SETUP COMMAND
     - name: Setup
-      run: cargo run setup & sleep 2 && sudo chmod 777 -R /run/nanocl
+      run: cargo run setup;
     # Debug
     - name: Debug
       run: >-
         sleep 5;
-        docker container ls;
+        docker container ls -a;
         ls -l /run/nanocl;
     # Run test
     - name: Run tests
