--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,6 @@ jobs:
       run: >-
         sleep 5;
         docker container ls -a;
-        ls -l /run/nanocl;
     # Run test
     - name: Run tests
-      run: cargo make test
+      run: newgrp nanocl && cargo make test
