--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,11 +39,12 @@ jobs:
     - name: Setup
       run: >-
         cargo run setup;
-    # Debug
-    - name: Debug
+    # Change permission because newgrp is not working
+    - name: Change perm
       run: >-
-        sleep 5;
+        sleep 2;
         docker container ls -a;
+        sudo chmod 777 -R /run/nanocl
     # Run test
     - name: Run tests
-      run: sudo newgrp nanocl && cargo make test
+      run: cargo make test
