--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,8 @@ jobs:
       run: >-
         sleep 2;
         docker container ls -a;
-        sudo chmod 777 -R /run/nanocl
+        sudo chmod 777 -R /run/nanocl;
+        ls -l /run/nanocl
     # Run test
     - name: Run tests
       run: cargo make test
