--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Cache register
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-cache
+        key: buildx-cache
     - name: Set branch name
       run: echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
     - name: Print branch name
@@ -27,7 +35,7 @@ jobs:
     - name: Print version
       run: echo $IMAGE_VERSION
     - name: Build image
-      run: docker build -t nanocl:$IMAGE_VERSION .
+      run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/.buildx-cache -t nanocl:$IMAGE_VERSION .
     - name: Export image
       run: docker save nanocl:$IMAGE_VERSION | gzip > /tmp/nanocl:$IMAGE_VERSION.tar.gz
     - name: Test if release already exists
