--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
         cargo run setup &&
         sleep 10 &&
         docker container ls -a &&
+        docker logs system-nanocl-daemon &&
         sudo chmod 777 -R /run/nanocl &&
         cargo run controller add dns &&
         cargo run controller add proxy;
