[REFACTOR] Daemon full cleaned

--- a/daemon/Dockerfile.dev
+++ b/daemon/Dockerfile.dev
@@ -9,26 +9,15 @@ RUN apk add g++
 RUN apk add make
 RUN apk add tzdata
 RUN apk add util-linux
-
-# Create a non root user
-RUN adduser --disabled-password nanocl
-RUN addgroup nanocl ping
+RUN cargo install cargo-watch
 
 RUN mkdir -p /run/nanocl
-RUN mkdir -p /home/nanocl/daemon
-WORKDIR /home/nanocl/daemon
-
-USER nanocl
-
-RUN cargo install cargo-watch
+RUN mkdir -p /nanocl
+WORKDIR /nanocl
 
 ENV TZ=Europe/Paris
 ENV RUSTFLAGS="-C target-feature=-crt-static"
 
 EXPOSE 8383/tcp
-COPY entrypoint.dev.sh /entrypoint.sh
-ENTRYPOINT ["/bin/sh", "/entrypoint.sh"]
 
-USER root
-
-CMD ["cargo", "watch", "-x", "run"]
+CMD ["cargo", "watch", "-x", "run --bin nanocld"]
