--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,7 +33,7 @@ tabled = "0.10.0"
 indicatif = "0.17.1"
 serde_json = "1.0.89"
 thiserror = "1.0.37"
-nanocl-models = "0.0.1"
+nanocl-models = { version = "0.0.1", features = ["serde"] }
 clap_complete = "4.0.6"
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.0.29", features = ["derive"] }
