--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -29,7 +29,7 @@ log = "0.4.17"
 regex = "1.5.6"
 futures = "0.3"
 bollard = { version = "*" }
-nanocl-models = { version = "0.0.1" }
+nanocl-models = { version = "0.0.1", features = ["serde"] }
 serde_yaml = "0.9"
 env_logger = { version = "0.10" }
 mustache = "0.9.0"
