[REFACTOR] Using multiprogress when downloading an image

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -14,7 +14,7 @@ args = ["clean"]
 # Run daemon
 [tasks.run-daemon]
 command = "cargo"
-args = ["run", "--bin", "nanocld"]
+args = ["run", "--bin", "nanocld", "${@}"]
 
 # Run cli
 [tasks.run-cli]
