[REFACTOR] Tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,10 +38,10 @@ jobs:
     # Run our CLI setup command to install a daemon
     - name: Setup
       run: >-
-        cargo make run-daemon -- --init;
-        sudo chmod 777 -R /run/nanocl;
-        cargo make run-daemon &;
-        sleep 5;
+        cargo make run-daemon -- --init &&
+        sudo chmod 777 -R /run/nanocl &&
+        cargo make run-daemon & &&
+        sleep 5
     # Run test
     - name: Run tests
       run: cargo make codecov
