--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,6 +42,13 @@ jobs:
         cargo make run-daemon -- --init
         cargo make run-daemon &
         sleep 5
-    # Run test
+    # Run coverage
     - name: Run tests
       run: cargo make covgen
+    # Upload it to codecov
+    - uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV }}
+        files: ./lcov.info
+        flags: unittests # optional
+        verbose: true # optional (default = false)
