--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -19,12 +19,12 @@ path = "src/main.rs"
 default = []
 
 [build-dependencies]
-chrono = { version = "0.4.19", features = ["serde"] }
 clap = { version = "4.0.29", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 clap_complete = "4.0.6"
 clap_mangen = { version = "0.2" }
 tabled = "0.10.0"
+nanocl-models = { version = "*", features = ["serde"] }
 
 [dependencies]
 nanocl-client = "*"
