--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,8 @@ jobs:
     - name: Run tests
       run: cargo make covgen
     # Upload it to codecov
-    - uses: codecov/codecov-action@v3
+    - name: Codecov
+      uses: codecov/codecov-action@v3.1.1
       with:
         token: ${{ secrets.CODECOV }}
         files: ./lcov.info
