--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
-  "models",
-  "client",
-  "daemon",
-  "cli",
+  "nanocl-models",
+  "nanocl-client",
+  "nanocld",
+  "nanocl",
 ]
 
 [profile.dev]
@@ -13,6 +13,6 @@ opt-level = 0
 opt-level = 3
 
 [patch.crates-io]
-nanocl-models = { path = "models" }
-nanocl-client = { path = "client" }
+nanocl-models = { path = "nanocl-models" }
+nanocl-client = { path = "nanocl-client" }
 bollard = { git = "https://github.com/leon3s/bollard" }
