--- a/nanocl-client/Cargo.toml
+++ b/nanocl-client/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/nxthat/nanocl"
 bollard = "*"
 futures = "0.3.25"
 nanocl-models = { version = "*", features = ["serde"] }
-ntex = { version = "0.6.0-beta.0", features = ["tokio"] }
+ntex = { version = "0.6.0", features = ["tokio"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serde_urlencoded = "0.7.1"
