--- a/nanocl/Cargo.toml
+++ b/nanocl/Cargo.toml
@@ -25,6 +25,8 @@ clap_complete = "4.0.6"
 clap_mangen = { version = "0.2" }
 tabled = "0.10.0"
 nanocl-models = { version = "*", features = ["serde"] }
+bollard = { version = "*" }
+chrono = "0.4.23"
 
 [dependencies]
 nanocl-client = "*"
@@ -45,3 +47,4 @@ hyper = "0.14.20"
 serde_urlencoded = "0.7.1"
 users = "0.11.0"
 tokio-util = "0.7.4"
+chrono = "0.4.23"
