--- a/Makefile.toml
+++ b/Makefile.toml
@@ -44,7 +44,7 @@ args = ["test", "--", "--nocapture"]
 # Test coverage
 [tasks.cov]
 command = "cargo"
-args = ["llvm-cov", "nextest", "--all"]
+args = ["llvm-cov", "nextest", "-j", "4"]
 
 # Test all with coverage for codecov
 [tasks.covgen]
