[REFACTOR] CodeCov command to use 4 threads

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -49,7 +49,7 @@ args = ["llvm-cov", "nextest", "-j", "4"]
 # Test all with coverage for codecov
 [tasks.covgen]
 command = "cargo"
-args = ["llvm-cov", "nextest", "--all", "--output-path", "./lcov.info", "--lcov"]
+args = ["llvm-cov", "nextest", "-j", "4", "--output-path", "./lcov.info", "--lcov"]
 
 # Release
 [tasks.release]
