--- a/nanocl-client/Cargo.toml
+++ b/nanocl-client/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/nxthat/nanocl"
 [dependencies]
 bollard = "0.14"
 futures = "0.3.25"
-nanocl-models = { version = "*", features = ["serde"] }
+nanocl-models = { version = "0.0.1", features = ["serde"] }
 ntex = { version = "0.6.0", features = ["tokio"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
