--- a/crates/nanocl_client/Cargo.toml
+++ b/crates/nanocl_client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nanocl-client"
+name = "nanocl_client"
 version = "0.0.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
@@ -9,11 +9,16 @@ license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
 repository = "https://github.com/nxthat/nanocl"
 
+[features]
+tokio = ["ntex/tokio"]
+glommio = ["ntex/glommio"]
+async-std = ["ntex/async-std"]
+
 [dependencies]
 bollard = "0.14"
 futures = "0.3.25"
-nanocl-models = { version = "0.0.1", features = ["serde"] }
-ntex = { version = "0.6.0", features = ["tokio"] }
+nanocl_models = { version = "0.0.1", features = ["serde"] }
+ntex = { version = "0.6.0" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 serde_urlencoded = "0.7.1"
