--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,7 @@ jobs:
         docker pull nexthat/nanocl-get-started:latest
         docker pull cockroachdb/cockroach:v21.2.17
         cargo make run-daemon -- --init
+        docker network ls
         cargo make run-daemon &
         sleep 5
     # Run coverage
