[FEATURE] Nanocld namespace now have a default network (#89)
* [FEATURE] Nanocld namespace now have a default network

* [CI/CD] Update tests

* [CI/CD] Debug tests

* [REFACTOR] Removed namespace creation inside sql

* [TEST] Re enabled setup test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,13 +34,16 @@ jobs:
     - uses: taiki-e/install-action@nextest
     # Prepare CI
     - name: Prepare CI
-      run: sudo ./scripts/prepare_tests.sh
+      run: |
+        sudo ./scripts/prepare_tests.sh
+        sudo ./scripts/install_docker.ubuntu.sh
     # Setup daemon for the tests
     - name: Setup
       run: |
         docker pull nexthat/nanocl-get-started:latest
         docker pull cockroachdb/cockroach:v21.2.17
         cargo make run-daemon -- --init
+        docker network ls
         cargo make run-daemon &
         sleep 5
     # Run coverage
