--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -24,7 +24,7 @@ clap = { version = "4.1.3", features = ["derive"] }
 clap_mangen = { version = "0.2" }
 
 [dependencies]
-nanocl_models = { version = "0.0.1", features = ["serde"] }
+nanocl_stubs = { version = "0.0.1", features = ["serde"] }
 bollard = { version = "0.14" }
 r2d2 = "0.8"
 log = "0.4.17"
