--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "nanocl_models"
+name = "nanocl_stubs"
 version = "0.0.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
-description = "Nanocl shared models"
+description = "Stubs used for nanocl daemon and client api"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
